@@ -41,6 +41,9 @@ Bugfixes
 
 Features
 ~~~~~~~~
+- Added a new Caster that removes illegal control caracters from input strings
+  scriptlet.workflow.casters.ToValidXMLString
+  (toennishoff)
 - made lang.XPClass support reflection for class constants
   (kiesel)
 - org.bugzilla.gateway.BugMessage class now inhertits methods from
